// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineButton renders as expected when passing a large size 1`] = `
<button
  className="btn btn--outline btn--undefined btn--large"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  
  Test Outline Large Button
</button>
`;

exports[`OutlineButton renders as expected when passing a light skin 1`] = `
<button
  className="btn btn--outline btn--light btn--normal"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  
  Test Outline Light Button
</button>
`;

exports[`OutlineButton renders as expected when passing a lupe icon 1`] = `
<button
  className="btn btn--outline btn--undefined btn--normal"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="lab-icon lab-icon--lupe lab-icon--white lab-icon--petit lab-icon--btn__icon"
  />
  Test Outline Lupe Button
</button>
`;

exports[`OutlineButton renders as expected when passing disabled as true 1`] = `
<button
  className="btn btn--outline btn--undefined btn--normal"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  
  Test Outline Disabled Button 1
</button>
`;

exports[`OutlineButton renders with base props 1`] = `
<button
  className="btn btn--outline btn--undefined btn--normal"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  
  Test Outline Button
</button>
`;
